# VoxelEngine

./: .gitignore  CMakeLists.txt  GenerateProjects.bat
Libraries/: CMakeLists.txt
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
VoxelEngine/: CMakeLists.txt
VoxelEngine/res/: Color.frag  Color.vert
VoxelEngine/res/shaders/: Color.frag  Color.vert
VoxelEngine/src/: Application.cpp  Application.h  Chunk.h  Shader.h  Voxel.h  main.cpp
VoxelEngine/src/Geometry/: Mesh.cpp  Mesh.h  Mesher.h  NaiveMesher.cpp  NaiveMesher.h  Vertex.h
VoxelEngine/src/Rendering/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
VoxelEngine/src/Utility/: AssetTracker.cpp  AssetTracker.h
